@@ -61,6 +61,7 @@ Depends: mate-desktop-common (>= 1.18),
          x11-xserver-utils,
          xserver-xorg-input-synaptics [!s390x],
          libglib2.0-bin,
+         gpiod,
          ${misc:Depends},
          ${shlibs:Depends},
 Conflicts: kylin-display-switch
