@@ -1,12 +1,11 @@
 QT += core gui dbus x11extras
-CONFIG += c++11 no_keywords link_pkgconfig x11extras
+CONFIG += c++11 no_keywords link_pkgconfig x11extras debug
 CONFIG -= app_bundle
 
 INCLUDEPATH += -I $$PWD/
+LIBS += -lukui-com4cxx
 
 PLUGIN_INSTALL_DIRS = $$[QT_INSTALL_LIBS]/ukui-settings-daemon
-
-DEFINES += USD_master
 
 EXTRA_CFLAGS +=-Wno-date-time
 
@@ -16,6 +15,7 @@ SOURCES += \
         $$PWD/clib-syslog.c             \
         $$PWD/QGSettings/qconftype.cpp  \
         $$PWD/QGSettings/qgsettings.cpp \
+        $$PWD/rfkillswitch.cpp \
         $$PWD/usd_base_class.cpp \
         $$PWD/xeventmonitor.cpp         \
         $$PWD/eggaccelerators.c         \
@@ -27,9 +27,15 @@ HEADERS += \
         $$PWD/plugin-interface.h        \
         $$PWD/QGSettings/qconftype.h    \
         $$PWD/QGSettings/qgsettings.h   \
+        $$PWD/rfkillswitch.h \
         $$PWD/usd_base_class.h \
+        $$PWD/usd_global_define.h \
         $$PWD/xeventmonitor.h           \
         $$PWD/eggaccelerators.h         \
         $$PWD/ukui-input-helper.h       \
         $$PWD/ukui-keygrab.h            \
-        $$PWD/config.h
+        $$PWD/config.h \
+        $$PWD/xrandroutput.h
+
+RESOURCES += \
+    $$PWD/ukui_icon.qrc
