@@ -43,7 +43,8 @@ Build-Depends: debhelper-compat (=12),
                libxkbcommon-dev,
 	       libkf5globalaccel-dev,
 	       libqt5x11extras5-dev,
-Standards-Version: 4.5.0
+	       libukui-common-dev,
+Standards-Version: 4.6.0.1
 Rules-Requires-Root: no
 Homepage: http://www.ukui.org/
 Vcs-Git: https://github.com/ukui/ukui-settings-daemon.git
@@ -54,6 +55,7 @@ Package: ukui-settings-daemon
 Architecture: any
 Depends: mate-desktop-common (>= 1.18),
          ukui-settings-daemon-common (= ${source:Version}),
+         colord,
          imwheel,
          ukui-polkit,
          x11-xserver-utils,
@@ -61,7 +63,8 @@ Depends: mate-desktop-common (>= 1.18),
          libglib2.0-bin,
          ${misc:Depends},
          ${shlibs:Depends},
-Conflicts:kylin-display-switch,
+Conflicts: kylin-display-switch
+Replaces: kylin-display-switch
 Description: daemon handling the UKUI session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a UKUI session and the applications that run
