@@ -1,3 +1,12 @@
+ukui-settings-daemon (3.1.0-1.49) v101; urgency=medium
+
+  * BUG号：无
+  * 需求说明：79112 动态背光控制功能集成Intel提供的patch，提供接口(需要mv版本的硬件支持)
+  * 其他改动说明：优化编译
+  * 其他改动影响域：无
+
+ -- sunjunhao <sunjunhao@kylinos.cn>  Tue, 19 Apr 2022 19:00:48 +0800
+
 ukui-settings-daemon (3.1.2-1.3) jammy; urgency=medium
 
   * BUG号：无
@@ -6,6 +15,7 @@ ukui-settings-daemon (3.1.2-1.3) jammy; urgency=medium
   * 其他改动影响域：无
   
  -- sunjunhao <sunjunhao@kylinos.cn>  Fri, 15 Apr 2022 17:07:56 +0800
+ 
 ukui-settings-daemon (3.1.0-1.48) jammy; urgency=medium
 
   * BUG号：114902 【护眼中心】手动调整亮度后，重启智能调节开关后，亮度会先增加1，然后进行自动调节（必现）
